Adds photo, better html structure, and css styles

--- a/index.html
+++ b/index.html
@@ -4,17 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Dev II - Week 1</title>
+    <title>Dominic Ty Martin</title>
     <link href="css/styles.css" rel="stylesheet">
 </head>
 
 
 <body>
-    <div class="container">
-        <h1>Welcome to Web Dev II</h1>
-        <p>Learning about advanced CSS and frameworks</p>
-    </div>
+    <header>
+        <div class="container">
+            <h1>Dominic Ty Martin</h1>
+        </div> <!-- End of container -->
+    </header>
 
+    <main>
+        <div class="container">
+            <div class="intro-container">
+                <div class="my-photo-container">
+                    <img class="my-photo" src="images/Dominic_Martin.JPG" alt="Dominic Ty Martin wearing grey shirt">
+                </div> <!-- End of dominic-photo container -->
 
+                <p> Hello! I'm Dominic Martin. 
+                    I was born on September<sup>3rd</sup>, 2000  and I am originally from 
+                    Aylmer, Gatineau, <abbr title="Québec">QC.</abbr> I moved to Ontario 
+                    around 2011 and have since stayed in Ottawa and currently live in
+                    Nepean near the IKEA.</p>
+
+                <p> I enrolled in Interactive Media Design because I had originally took the Journalism 
+                    course here at Algonquin and really enjoyed the technical aspects of the program but not
+                    so much the actual Journalism part, and was recommended 
+                    <abbr title="Interactive Media Design">IMD</abbr> by the program coordinator, but wanted to
+                    try my hand at Computer Programming first because at the time I didn't really consider myself 
+                    a design person. I enrolled into Computer Programming but failed Math <em>twice</em> -not a
+                    a math person- and finally enrolled in <abbr title="Interactive Media Design">IMD</abbr>.
+                    I really enjoyed first semester and hope I enjoy second semester just as much, or more.</p>
+
+            </div> <!-- End of intro-container -->
+
+            <div class="list-container">
+                <dl>
+                    <dt>Program</dt>
+                    <dd>Interactive Media Design</dd>
+                    <dt>Course</dt>
+                    <dd>MTM6201 Web Development II</dd>
+                    <dt>Hobbies</dt>
+                    <dd>Biking, Dungeons &#38; Dragons, Listening to Music, History</dd>
+                </dl>
+            </div> <!-- End of list-container -->
+        </div> <!-- End of container -->
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2023 Dominic Ty Martin</p> 
+        </div>
+    </footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+<!-- Dominic Ty Martin -->
